--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TA_DFA)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(TA_DFA main.cpp DFA.cpp DFA.h)
+add_executable(TA_DFA main.cpp DFA.h DFA.cpp)
