DFA class expanded with genDOT() and genImage() member functions. The program can now generate images of the DFA's created.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,13 @@ cmake_minimum_required(VERSION 3.17)
 project(TA_DFA)
 
 set(CMAKE_CXX_STANDARD 14)
+set(GRAPHVIZ_INCLUDE_DIR "/usr/include/graphviz/")
+set(GRAPHVIZ_LIB_DIR "/usr/lib/x86_64-linux-gnu/graphviz/")
 
-add_executable(TA_DFA main.cpp DFA.h DFA.cpp)
+
+include_directories("${GRAPHVIZ_INCLUDE_DIR}")
+
+add_executable(TA_DFA main.cpp DFA.h DFA.cpp main.cpp)
+
+target_link_libraries(TA_DFA "${GRAPHVIZ_LIB_DIR}" cgraph gvc)
+
