cleanup + start abstract class automaton and class NFA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
-project(TA_DFA)
+project(TA_Automata)
 
 set(CMAKE_CXX_STANDARD 14)
 set(GRAPHVIZ_INCLUDE_DIR "/usr/include/graphviz/")
@@ -8,7 +8,7 @@ set(GRAPHVIZ_LIB_DIR "/usr/lib/x86_64-linux-gnu/graphviz/")
 
 include_directories("${GRAPHVIZ_INCLUDE_DIR}")
 
-add_executable(TA_DFA main.cpp DFA.h DFA.cpp main.cpp)
+add_executable(TA_DFA src/main.cpp src/DFA.h src/DFA.cpp src/main.cpp src/NFA.cpp src/NFA.h src/Automaton.cpp src/Automaton.h)
 
 target_link_libraries(TA_DFA "${GRAPHVIZ_LIB_DIR}" cgraph gvc)
 
